--- a/webdev/week06/assign06.css
+++ b/webdev/week06/assign06.css
@@ -62,7 +62,7 @@ header {
     display: none;
 }
 
-.container{
+.container, .acadcontainer {
     display: grid;
     grid-template-columns: auto;
 }
@@ -71,7 +71,7 @@ header {
     padding: .5em;
 }
 
-.home-img img {
+.home-img img, .banner-box img, .sports-main img, .arts-main img {
     width: 100%;
 }
 
@@ -79,10 +79,120 @@ header {
     color: rgb(216, 172, 27);
 }
 
-blockquote {
+.banner-box {
+    position: relative;
     text-align: center;
-    font-weight: bold;
+    color: white;
+}
+
+.banner-box h1 {
+    position: absolute;
+    bottom: 16px;
+    left: 16px;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+}
+
+.banner-text {
+    padding: 1em;
+}
+
+.reg a {
+    color: white;
+    text-decoration: none;
+}
+
+.reg {
+    background-color: rgb(158, 36, 36);
+    padding: .5em;
+    width: 40%;
+    margin: auto;
+    text-align: center;
+}
+
+.sports-main hr {
+    color: #818181;
+    background-color: #818181;
+    height: 5px;
+    width: 95%;
+}
+
+#activities, .sports-main hr {
+    margin-top: 80px;
+}
+
+#activities div {
+    background-color: #b6b6b6;
+    padding: .5em;
+    padding-bottom: 5em;
+}
+
+#activities h2 {
+    color: rgb(158, 36, 36);
+}
+
+#activities p {
+    text-align: center;
+    color: white;
+}
+
+#degrees {
+    display: grid;
+    grid-gap: 1em;
+}
+
+#degrees, #fees{
+    margin-left: 1em;
+    padding-bottom: 2em;
+}
+
+#degrees h3,h4 {
+    color: #818181;
+    margin-bottom: -30px;
+}
+
+#degrees h3 {
+    text-decoration: underline;
+}
+
+#degrees h2 {
+    font-size: 50px;
     color: rgb(243, 192, 26);
+    margin-bottom: -25px;
+    font-style: italic;
+}
+
+.link a {
+    font-size: 30px;
+    font-style: italic;
+}
+
+.link {
+    padding: 2em;
+    text-align: center;
+}
+
+#fees h2 {
+    color: rgb(14, 14, 158);
+}
+
+#fees {
+    background-color: aliceblue;
+}
+
+#deadlines {
+    background-color: #b6b6b6;
+    padding: 2em;
+}
+
+#deadlines h2 {
+    margin-left: 10px;
+    color: rgb(107, 19, 19);
+    text-decoration: underline;
+}
+
+#deadlines b {
+    color: rgb(14, 14, 158);
 }
 
 footer hr {
@@ -104,6 +214,10 @@ span {
     text-align: center;
 }
 
+.hidden {
+    display: none;
+}
+
 #social img {
     max-width: 80px;
 }
@@ -112,8 +226,16 @@ span {
     margin: auto;
 }
 
-.cv-img img{
-    width: 100%;
+.arts-main {
+    padding: .5em;
+}
+
+.arts-main #degrees p {
+    background-color: antiquewhite;
+}
+
+.arts-img {
+    margin-top: 100px;
 }
 
 /** For tablet **/
@@ -124,13 +246,21 @@ span {
         text-align: center;
     }
 
-    .container{
+    .container, .acadcontainer {
         grid-template-columns: 160px auto;
         padding: 0;
     }
 
     main {
         padding: 1.5em;
+    }
+
+    .acadcontainer main {
+        padding: 0;
+    }
+
+    .banner-box h1 {
+        font-size: 40px;
     }
 
     .home-img img {
@@ -162,6 +292,20 @@ span {
     .side-bar a:hover {
         color: #f1f1f1;
     }
+
+    .reg {
+        font-size: 20px;
+    }
+
+    #activities {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    #activities h2 {
+        text-align: center;
+        margin-bottom: -10px;
+    }
 }
 
 /** For desktop and other larger screens **/
@@ -176,10 +320,30 @@ span {
         height: 30%;
     }
 
+    .hidden {
+        display: list-item;
+        list-style: none;
+        margin-top: 30px;
+        float: left;
+    }
+
     .container h1 {
         font-size: calc(28px + 1vw);
     }
 
-    .container p {
+    .banner-box h1 {
+        font-size: 60px;
+    }
+
+    .container p, .acadcontainer p, .banner-text p, .reg, .arts-main {
         font-size: calc(12px + 1vw);
     }
+
+    #degrees h2 {
+        font-size: 70px;
+    }    
+
+    .reg {
+        font-size: 30px;
+    }
+}
