--- a/style.css
+++ b/style.css
@@ -79,6 +79,19 @@ header {
     color: rgb(216, 172, 27);
 }
 
+li a:hover {
+    font-weight: bold;
+}
+
+li {
+    list-style: none;
+}
+
+li a:visited {
+    color: rgb(134, 111, 6);
+    font-weight: bold;
+}
+
 blockquote {
     text-align: center;
     font-weight: bold;
@@ -161,6 +174,7 @@ span {
 
     .side-bar a:hover {
         color: #f1f1f1;
+        font-weight: bold;
     }
 }
 
