--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
     background-color: #818181;
 }
 
-body p,li {
+body p,
+li {
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -62,7 +63,7 @@ header {
     display: none;
 }
 
-.container{
+.container {
     display: grid;
     grid-template-columns: auto;
 }
@@ -125,7 +126,7 @@ span {
     margin: auto;
 }
 
-.cv-img img{
+.cv-img img {
     width: 100%;
 }
 
@@ -137,7 +138,7 @@ span {
         text-align: center;
     }
 
-    .container{
+    .container {
         grid-template-columns: 160px auto;
         padding: 0;
     }
