--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ span {
     }
 
     .side-bar a:hover {
+        background-color: transparent;
         color: #f1f1f1;
         font-weight: bold;
     }
