--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ span {
     }
 
     .side-bar a:hover {
-        background-color: transparent;
+        background-color: #111;
         color: #f1f1f1;
         font-weight: bold;
     }
