--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ li {
     background-color: white;
 }
 
+video {
+    width: 100%;
+}    
+
 .logo-box img {
     margin-top: -40px;
     width: 250px;
@@ -74,6 +78,25 @@ header {
 
 .container h1 {
     color: rgb(216, 172, 27);
+}
+
+.banner-box {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.banner-box h1 {
+    position: absolute;
+    bottom: 16px;
+    left: 16px;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+    color: rgb(114, 114, 114);
+}
+
+.banner-text {
+    padding: 1em;
 }
 
 li a:hover {
@@ -139,7 +162,7 @@ span {
         padding: 0;
     }
 
-    main {
+    .home-img, .home-grid {
         padding: 1.5em;
     }
 
@@ -152,6 +175,25 @@ span {
 
     main h1 {
         margin-top: 50px;
+    }
+
+    .banner-box {
+        position: relative;
+        text-align: center;
+        color: white;
+    }
+    
+    .banner-box h1 {
+        position: absolute;
+        bottom: 16px;
+        left: 16px;
+        font-family: 'Times New Roman', Times, serif;
+        font-style: italic;
+        color: rgb(114, 114, 114);
+    }
+    
+    .banner-text {
+        padding: 1em;
     }
 
     .side-bar {
